package civictech.dto

import java.util.*

data class AgentDef(val uuid: UUID, val displayName: String)
