package civictech.metagraph

interface Quantifiable {
    val score: Float
}
